# cq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs  update.rs
src/decode/: address.rs  mod.rs  transaction.rs
src/format/: json.rs  mod.rs  pretty.rs  raw.rs
src/input/: detect.rs  mod.rs  read.rs
src/query/: engine.rs  mod.rs  path.rs  shortcuts.rs
tests/: cli.rs
tests/fixtures/: babbage_simple.cbor  drep_registration.cbor  pool_registration.cbor  preprod_plutus.cbor
